fix: fix issue with background color and button overlap

--- a/src/SearchField/index.scss
+++ b/src/SearchField/index.scss
@@ -8,7 +8,10 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: $search-form-background-color;
+  }
+
+  .pgn__searchfield__action-btn {
+    background-color: $search-button-background-color;
   }
 
   .btn:focus-visible {
@@ -86,18 +89,14 @@
 
   label.has-label-text {
     padding-inline-start: .75rem;
+    background-color: $search-label-background-color;
+    display: flex;
+    align-items: center;
+    height: 100%;
   }
 
   &.pgn__searchfield--external {
     border: none;
-
-    .pgn__searchfield-form {
-      background-color: unset;
-
-      .pgn__searchfield_wrapper {
-        background-color: $search-form-background-color;
-      }
-    }
 
     .btn-primary {
       background: map-get($search-btn-variants, "light");
